--- a/src/static/pages/contact.html
+++ b/src/static/pages/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm style="overflow: hidden;">
+<html style="overflow: hidden;">
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
@@ -11,12 +11,12 @@
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-      <div class="navbar"><a href="/public/app/index.php" >Home</a></div>
+      <div class="navbar"><a href="/public/app/index.html" >Home</a></div>
       <div class="back" onclick="goBackOrDashboard()">Back</div>
       <script src="/contact.js"></script>
     </head>
     <body> 
-      <?php echo "This is php code"; ?>
+      
    <header>
       <img style="z-index: -999; position: relative; top: 15px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
   </header>
@@ -59,17 +59,17 @@
          </div>
    <script type="text/javascript" src="/src/index.mjs"></script>
    <script type="text/javascript" src="/src/app.js"></script>
-   <script type="text/javascript" src="/src/static/js/express.js"></script><br>
+   <script type="text/javascript" src="/src\static\pages\js\express.js"></script><br>
    <footer> 
    <div class="ref-buttons">
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.php">Terms and Conditions</a> |
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.php">Accessibility</a> |
-      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.php">Sources</a>
-      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.php">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.php"> Procedures</a>
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> |
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> |
+      <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources.html">Sources</a>
+      | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/csspolicy.html">Policies</a> | <a style="font-size:12px; text-decoration:none; color:#aaafb2;" href="/src/static/pages/cssprocedure.html"> Procedures</a>
    </div>
    <span style="display:inline; margin-top: 20px;" >Pdubbs Solutions |  Administrative &amp; Project Management Services</span><br>
    <div style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;"></div>
    <img style=" justify-content:center; max-width: 100px; padding: 0; max-height: 100px; left: 380px;margin-top: -20px; cursor: pointer;  z-index: -999; vertical-align: middle;  position:absolute;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" id="footer-logo" onclick="goHome()" />
    </footer>
 </body>
-</htm>
+</html>
