--- a/src/static/pages/login.html
+++ b/src/static/pages/login.html
@@ -14,7 +14,7 @@
 <body>
    <header>
        <img style="z-index: -999; position: relative; top: 25px; max-width: 200px; padding: 0; display: block; margin: 0 auto; cursor: pointer; max-height: 200px;" src="/src/static/images/Pdubbs-Logo.jpg" alt="logo" class="logo" onclick="goHome()" />
-   </header><h1 style="text-align: center; position: inherit; padding:0;" >Login</h1>
+   </header><h1 style=" margin-left: 110px;text-align: center; position: relative; padding:0;" >Login</h1>
    <p style="text-align: center;">Forgot your password? <a href="/src/static/views/forgot-password.ejs" id="login" >Reset Now </a></p>
    <form id="loginForm">
       <label for="username" aria-placeholder="Username"></label>
@@ -23,7 +23,7 @@
       <input type="email" id="email" name="email" placeholder="Email Address" required />
       <label for="password" aria-placeholder="Password"></label>
       <input type="password" id="password" name="password" placeholder="Password" required />
-      <button type="submit">Login</button>
+      <button style="margin-left: 160px;" type="submit">Login </button>
    </form><br>
    <p style="text-align: center;">Want to reset your password? <a href="/src/static/views/reset-password.ejs" id="login1" >Reset Password </a></p>
    <script>
