--- a/src/static/pages/login.html
+++ b/src/static/pages/login.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=1200, initial-scale=1.0"/>
       <meta http-equiv="refresh" content="url=https://pdubbssolutions.ca"/>
       <link rel="stylesheet"  type="text/css" href="/src/static/styles.css" />
       <title>Pdubbs Solutions | Login Page</title>
@@ -24,7 +24,7 @@
       <label for="password" aria-placeholder="Password"></label>
       <input type="password" id="password" name="password" placeholder="Password" required />
       <button style="margin-left: 160px;" type="submit">Login </button>
-   </form><br>
+   </form>
    <p style="text-align: center;">Want to reset your password? <a href="/src/static/views/reset-password.ejs" id="login1" >Reset Password </a></p>
    <script>
       document.getElementById('loginForm').addEventListener('submit', function(event) {
@@ -39,7 +39,7 @@
       });
    </script>
 
-  <footer><hr>
+  <footer>
    <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src\static\pages\login.html">Login</a> | <a href="/src\static\pages\register.html">Register</a> | <a href="/src\static\pages\contact.html">Contact</a> | <a href="/src\static\pages\cart.html">Cart</a></div>
    <br>
       <div class="ref-buttons">
