--- a/src/static/pages/register.html
+++ b/src/static/pages/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=1200, initial-scale=1.0"/>
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="/src/static/styles.css" />
     <title>Pdubbs Solutions | Registration</title>
@@ -17,13 +17,13 @@
         <h1 style="text-align: center; margin-left: 105px; position: absolute;" id="register">Registration</h1>
     </header>
     <section class="registation">
-      <p style="text-align: center;">Already have an account? <a href="/public\app\static\pages\login.html" id="login" >Login here</a></p>
+      <p style="text-align: center;">Already have an account? <a href="/src\static\pages\login.html" id="login" >Login here</a></p>
       <div class="register">
          <div >
      
          </div> 
         <form id="registrationForm" action="/register" method="POST"> 
-         <input type="text" name="username" value="" id="username" placeholder="Username"/>
+         <input class="focus"  type="text" name="username" value="" id="username" placeholder="Username"/>
          <span id="usernameCheck" class="checkmark"  style="display:none;">✔️</span>
          <input type="email" name="email" id="email" value="" placeholder="Email Address" required/> 
          <span id="emailCheck" class="checkmark" style="display:none;">✔️</span>              
@@ -33,7 +33,7 @@
             <span id="passwordCheck" class="checkmark" style="display:none;">✔️</span>
             <input type="password" id="password2" name="password2" placeholder="Confirm Password" required>
             <span id="password2Check" class="checkmark" style="display:none;">✔️</span>
-            <button  style="margin-left: 170px;" type="submit" onclick=>Register</button>
+            <button  style="margin-left: 150px; position: relative;" type="submit" onclick=>Register</button>
         </form>
         <script>
            document.getElementById('registrationForm').addEventListener('submit', function(event) {
@@ -43,7 +43,7 @@
       </div>
     </section>
     <footer>
-      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/public\app\static\pages\login.html">Login</a> | <a href="public\app\static\pages\register.html">Register</a> | <a href="/public\app\static\pages\contact.html">Contact</a> | <a href="/public\app\static\pages\cart.html">Cart</a></div><br>
+      <div style="display: inline; margin-top: 0px; text-decoration: none;"  class="auth-buttons"><a href="/src/static/pages/login.html">Login</a> | <a href="src/static/pages/register.html">Register</a> | <a href="/src/static/pages/contact.html">Contact</a> | <a href="/src/static/pages/cart.html">Cart</a></div><br>
       <div class="ref-buttons">
          <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="termsandconditions.html">Terms and Conditions</a> | <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="accessibility.html">Accessibility</a> | <a style="font-size: 12px; text-decoration: none; color:#aaafb2;" href="sources">Sources</a>
       </div>
