--- a/src/static/pages/logout.html
+++ b/src/static/pages/logout.html
@@ -3,7 +3,7 @@
     <head>
       <meta charset="utf-8" />
       <meta http-equiv="X-UA-Compatible" content="IE-edge" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="viewport" content="width=1200, initial-scale=1.0"/>
       <meta http-equiv="refresh" content="url=https://pdubbssolutions.ca"/>
       <link rel="stylesheet"  type="text/css" href="/src/static/styles.css" />
       <title>Pdubbs Solutions | Login Page</title>
