--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       content="BF8pc_URLQQbba5sQgIi_MVADChvuQJk0Pci3MhcWWc"
     />
     <script>
-      if (window.location.hostname === "pdssolutions.web.app") {
+      if (window.location.hostname === "github") {
         window.location.replace("https://pdubbssolutions.ca");
       }
     </script>
@@ -389,25 +389,25 @@
       <div class="ref-buttons">
         <a
           style="font-size: 12px; text-decoration: none; color: #aaafb2"
-          href="/src\static\pages\termsandconditions.php"
+          href="/src\static\pages\termsandconditions.html"
           >Terms and Conditions</a
         >
         |
         <a
           style="font-size: 12px; text-decoration: none; color: #aaafb2"
-          href="/src\static\pages\accessibility.php"
+          href="/src\static\pages\accessibility.html"
           >Accessibility</a
         >
         |
         <a
           style="font-size: 12px; text-decoration: none; color: #aaafb2"
-          href="/src\static\pages\sources.php"
+          href="/src\static\pages\sources.html"
           >Sources</a
         >
         |
         <a
           style="font-size: 12px; text-decoration: none; color: #aaafb2"
-          href="/src/static/pages/csspolicy"
+          href="/src/static/pages/csspolicy.html"
           >Policies &amp; Procedures</a
         >
       </div>
@@ -431,12 +431,11 @@
           max-width: 100px;
           padding: 0;
           max-height: 100px;
-          left: 360px;
           margin-top: -20px;
           cursor: pointer;
           z-index: -999;
           vertical-align: middle;
-          position: absolute;
+          position: relative;
         "
         src="/src/static/images/Pdubbs-Logo.jpg"
         alt="logo"
