--- a/src/static/pages/csspolicy.html
+++ b/src/static/pages/csspolicy.html
@@ -30,45 +30,104 @@
       </header>
       <div class="container">
          <div class="box box-1">
-             <h2 class="heading  heading-container active" id="heading-1">Accessing Downloadable Content</h2>
-               <p class="content  content-paragraph " id="content-1">
+             <h2 class="heading heading-container  heading-container " id="heading-1">Accessing Downloadable Content</h2>
+               <p class="content  content-paragraph  " id="content-1">
                   <span style="font-size: 14px; color: olivedrab;" class="bold">1. Grant of License for Downloadable Content </span><br>Upon purchase or authorized access, the company grants a limited, non-transferable, non-exclusive license to download and use the content solely for personal, non-commercial use. Reproduction, distribution, or public display of the content without prior written consent is prohibited.<br><br>
                   <span style="font-size: 14px; color: olivedrab;" class="bold">2. Access and Availability</span><br>Access to downloadable content is provided via source links. The company reserves the right to restrict or revoke access to content in cases of suspected unauthorized sharing, resale, or violation of this policy.<br><br>
                   <span style="font-size: 14px; color: olivedrab;" class="bold">3. Intellectual Property</span><br>All downloadable content remains the intellectual property of the company. Unauthorized use, sharing, or modification of the content is strictly prohibited and may result in legal action.<br><br>
-                  <span style="font-size: 14px; color: olivedrab;" class="bold">4. Technical Support</span><br>The company provides limited technical support for access issues related to downloadable content. Support inquireies can be directed to the company's customer service representative.<br>
+                  <span style="font-size: 14px; color: olivedrab;" class="bold">4. Technical Support</span><br>The company provides limited technical support for access issues related to downloadable content. Support inquiries can be directed to the company's customer service representative. <button  id="access" onclick="window.location.href='cssprocedure.html#header-1 '"  style="margin-left: 145px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
                </p>
-         </div>
-             <h2 class="heading" id="heading-2">Account Registration &amp; Login</h2>
-             <p class="content content-paragraph" id="content-2">Account Registration &amp; Login</p>
+             <h2 class="heading heading-container" id="heading-2">Account Registration &amp; Login</h2>
+             <p class="content content-paragraph active" id="content-2">
+               <span style="font-size: 14px; color: olivedrab;" class="bold">1. Account Creation Requirements</span><br>To access certain areas of the comapny's services, users are required to register for an account. Users must provide accurate, complete, and current information at registration.<br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">2. Account Security and Responsibility</span><br>Users are responsible for maintaining the confidentiality of their account credentials and are liable for any actions taken under their account. The company is not liable for any loss due to unauthorized use of accounts.<br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">3. Account Termination</span><br>The company reserves the right to suspend or terminate accounts for any misuse, false information, or breach of policy terms.<br><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold">4. Age Requirements</span>Only individuals aged 16 years or older may register for an account. Parental consent is required for individuals under 16
+               <button  id="access1" onclick="window.location.href='cssprocedure.html#header-2'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+             </p>
            
-             <h2 class="heading" id="heading-3">Checkout &amp; Purchases</h2>
-             <p class=" content content-paragraph" id="content-3">Checkout &amp; Purchases</p>
+             <h2 class="heading heading-container" id="heading-3">Checkout &amp; Purchases</h2>
+             <p class=" content content-paragraph" id="content-3">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access2" onclick="window.location.href='cssprocedure.html#header-3'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+             </p>
 
-            <h2 class="heading" id="heading-4">Company Service Standards</h2>
-            <p class="content content-paragraph" id="content-4">Company Service Standards</p>
 
-            <h2 class="heading" id="heading-5">Customer Service Standards</h2>
-            <p class="content content-paragraph" id="content-5">Customer Service Standards</p>
+            <h2 class="heading heading-container" id="heading-4">Company Service Standards</h2>
+            <p class="content content-paragraph" id="content-4">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access3" onclick="window.location.href='cssprocedure.html#header-5'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+             </p>
 
-            <h2 class="heading" id="heading-6">Digital Products</h2>
-            <p class="content content-paragraph" id="content-6">Digital Products</p>
+            <h2 class="heading heading-container" id="heading-5">Customer Service Standards</h2>
+            <p class="content content-paragraph" id="content-5">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access4" onclick="window.location.href='cssprocedure.html#header-5'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
 
-            <h2 class="heading" id="heading-7">Our Standards ~ Pdubbs Solutions</h2>
-            <p class="content content-paragraph" id="content-7">Our Standards</p>
+            <h2 class="heading heading-container" id="heading-6">Digital Products</h2>
+            <p class="content content-paragraph" id="content-6">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access5" onclick="window.location.href='cssprocedure.html#header-6'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
 
-            <h2 class="heading" id="heading-8">Payment Information Storage</h2>
-            <p class="content content-paragraph" id="content-8">Payment Information Storage</p>
+            <h2 class="heading heading-container" id="heading-7">Our Standards ~ Pdubbs Solutions</h2>
+            <p class="content content-paragraph" id="content-7">              
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access6" onclick="window.location.href='cssprocedure.html#header-7'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button></p>
 
-            <h2 class="heading" id="heading-9">Products &amp; Pricing</h2>
-            <p class="content content-paragraph" id="content-9">Products &amp; Pricing</p>
+            <h2 class="heading heading-container" id="heading-8">Payment Information Storage</h2>
+            <p class="content content-paragraph" id="content-8">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access7" onclick="window.location.href='cssprocedure.html#header-8'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
 
-            <h2 class="heading" id="heading-10">Refunds, Returns &amp; Cancellations</h2>
-            <p class="content content-paragraph" id="content-10">Refunds, Returns, &amp; Cancellations</p>
+            <h2 class="heading heading-container" id="heading-9">Products &amp; Pricing</h2>
+            <p class="content content-paragraph" id="content-9">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access8" onclick="window.location.href='cssprocedure.html#header-9'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
 
-            <h2 class="heading" id="heading-11">Zoom 1:1, Group Session, &amp; In-Person/Virtual</h2>
-            <p class="content content-paragraph" id="content-11">Zoom 1:1, Group Sessions, &amp; In-Person/Virtual</p>
+            <h2 class="heading heading-container" id="heading-10">Refunds, Returns &amp; Cancellations</h2>
+            <p class="content content-paragraph" id="content-10">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access9" onclick="window.location.href='cssprocedure.html#header-10'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
+
+            <h2 class="heading heading-container" id="heading-11">Zoom 1:1, Group Session, &amp; In-Person/Virtual</h2>
+            <p class="content content-paragraph" id="content-11">
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <span style="font-size: 14px; color: olivedrab;" class="bold"></span><br>
+               <button  id="access10" onclick="window.location.href='cssprocedure.html#header-11'"  style="margin-left: 45px; margin-top: 5px;color:#a8738a; font-weight: bold; cursor: pointer; padding:0;  position:absolute;" href="cssprocedure.html">View Procedure</button>
+            </p>
          </div>
-     
+     </div>
    <script>
       const headings = document.querySelectorAll(".heading");
 
